Front: fix overflow-y

--- a/frontend/components/Profile/Profile.scss
+++ b/frontend/components/Profile/Profile.scss
@@ -130,7 +130,7 @@ div.GameHistoryContainer hr {
 }
 
 div.GameHistory {
-  max-height: 600px;
+  max-height: 384px;
   overflow-y: auto;
   width: 100%;
 }
